# transsub

./: Cargo.toml  README.md  sample.srt
.github/workflows/: release.yml
src/: args.rs  entry.rs  file.rs  iso_639.rs  main.rs  translate.rs  utils.rs
