[package]
name = "transsub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
futures = "0.3.26"
lazy_static = "1.4.0"
regex = "1.7.1"
reqwest = "0.11.14"
serde_json = "1.0.94"
strum_macros = "0.24.3"
tokio = { version = "1.26.0", features = ["full"] }
walkdir = "2.3.2"
