[package]
name = "transsub"
version = "0.1.0"
edition = "2021"
authors = ["Amir Heidari amir.heidari.khoram@gmail.com"]
license = "MIT"
description = "A tool to translate subtitles"
readme = "README.md"
homepage = "https://github.com/amirheidarikhoram/transsub"
repository = "hhttps://github.com/amirheidarikhoram/transsub"
keywords = ["cli", "translation", "subtitle"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
futures = "0.3.26"
lazy_static = "1.4.0"
regex = "1.7.1"
reqwest = "0.11.14"
serde_json = "1.0.94"
strum_macros = "0.24.3"
tokio = { version = "1.26.0", features = ["full"] }
walkdir = "2.3.2"
